--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
     "sonner": "^1.7.3",
