--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.10.3",
     "@mantine/hooks": "^7.16.1",
+    "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-label": "^2.1.1",
@@ -19,8 +20,10 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.64.2",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "@wordpress/block-library": "^9.17.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -29,16 +32,17 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.0.6",
+    "google-auth-library": "^9.15.1",
     "html2canvas": "^1.4.1",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
+    "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
     "sonner": "^1.7.3",
@@ -50,6 +54,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
