--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "framer-motion": "^12.0.6",
     "google-auth-library": "^9.15.1",
     "html2canvas": "^1.4.1",
+    "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
