--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.64.2",
+    "@types/js-cookie": "^3.0.6",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
-    "@wordpress/block-library": "^9.17.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -34,11 +34,14 @@
     "framer-motion": "^12.0.6",
     "google-auth-library": "^9.15.1",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "jsdom": "^26.0.0",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.474.0",
+    "micro": "^10.0.1",
+    "motion": "^12.4.1",
     "next": "14.2.23",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
@@ -47,6 +50,7 @@
     "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
     "sonner": "^1.7.3",
+    "stripe": "^17.6.0",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
