--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.10.3",
     "@mantine/hooks": "^7.16.1",
     "@radix-ui/react-alert-dialog": "^1.1.5",
     "@radix-ui/react-avatar": "^1.1.2",
@@ -20,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.5",
+    "@react-hook/window-size": "^3.1.1",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.64.2",
     "@types/js-cookie": "^3.0.6",
@@ -40,12 +40,10 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "lucide-react": "^0.474.0",
-    "micro": "^10.0.1",
-    "motion": "^12.4.1",
+    "motion": "^12.4.3",
     "next": "14.2.23",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.0",
     "react": "^18",
+    "react-confetti": "^6.2.2",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "sharp": "^0.33.5",
@@ -55,7 +53,6 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "woocommerce-api": "^1.5.0",
-    "yup": "^1.6.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
